# ubuntu-18.04-lid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  basic.h  button.c  button.h  lidManager.c  lidManager.h  main.c  power.c  power.h  systemd-lid.service
startup/etc/xdg/autostart/: gnome-lid.desktop
